# qgis3-faa-dof-postgis

./: .gitignore  Pipfile  README.md  create_plugin_package.ps1  pyproject.toml
database_setup/: .env_sample  alembic.ini
database_setup/alembic_migrations/: env.py
database_setup/alembic_migrations/versions/: 2112c1c93f89_populate_initial_data.py  8e1456d1a51e_create_tables.py  f88636747b86_add_views.py
database_setup/initial_data/: horizontal_acc.csv  lighting.csv  marking.csv  oas.csv  obstacle_type.csv  tolerance_uom.csv  verif_status.csv  vertical_acc.csv
database_setup/python_scripts/: load_countries_states.py  load_countries_states_config_sample.yml  obstacle_types.py  obstacle_types_config.yml
database_setup/sql/: ddl.sql  ddl_views.sql  dml.sql
qgis3_plugin/faa_dof_manager/: Makefile  README.html  README.txt  __init__.py  coordinates.py  custom_logging.py  db_utils.py  db_values_map.py  dof_layers.py  errors.py  faa_dof_manager.py  faa_dof_manager_dialog.py  faa_dof_manager_dialog_base.ui  load_dof.py  metadata.txt  obstacle_data_validator.py  pb_tool.cfg  requirements.txt  resources.py  resources.qrc  types.py
qgis3_plugin/faa_dof_manager/help/source/: conf.py  index.rst
qgis3_plugin/faa_dof_manager/test/: test_faa_dof_manager_dialog.py  test_resources.py
